--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -10,6 +10,11 @@
     margin: 0;
     padding: 40px;
     width: 100%;
+    // padding-top: 130px;
+
+    @include mobile{
+        padding-top: 0;
+    }
 
     .footer-row1{
         .footer-logo{
