--- a/src/components/globalStyle/_variables.scss
+++ b/src/components/globalStyle/_variables.scss
@@ -1,4 +1,8 @@
 
 $primary: #252842;
 $defaultFont: Montserrat;
-$defaultColor: #37b6fd
+$defaultFontSize: 20px;
+$fontSizeMobile: 18px;
+$fontSizeTitle: 50px;
+$defaultColor: #37b6fd;
+$fontSizeTitle: 64px;
