--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -16,18 +16,18 @@
         padding-top: 0;
     }
 
-    .footer-row1{
-        .footer-logo{
-            width: 120px;
-            height: 120px;
-            padding: 0;
+    // .footer-row1{
+    //     .footer-logo{
+    //         width: 120px;
+    //         height: 120px;
+    //         padding: 0;
 
-            @include mobile{
-                width: 60px;
-                height: 60px;
-            }
-        }
-    }
+    //         @include mobile{
+    //             width: 60px;
+    //             height: 60px;
+    //         }
+    //     }
+    // }
 
     .footer-row2{
         .footer-tks{
@@ -43,11 +43,23 @@
                 padding-top: 10px;
             }
 
+            
             .tks-txt{
                 color: #fff;
             }
+            
+            .footer-logo{
+                width: 120px;
+                height: 120px;
+                padding: 0;
+    
+                @include mobile{
+                    width: 60px;
+                    height: 60px;
+                }
+            }
         }
-
+        
         .footer-contact{
             width: 33%;
 
