--- a/src/components/achievement/Achievement.scss
+++ b/src/components/achievement/Achievement.scss
@@ -3,12 +3,12 @@
 
 .wrapper{
     position: relative;
-    top: 90px;
+    top: 76px;
     height: 635px;
 
     @include mobile{
-        height: 376px;
-        margin-top: -4px;
+        height: 320px;
+        margin-top: -6px;
     }
 
     .achievement-background{
@@ -16,7 +16,7 @@
         height: 635px;
 
         @include mobile{
-            height: 286px;
+            height: 230px;
         }
     }
 }
@@ -29,17 +29,18 @@
 
     @include mobile{
         width: 320px;
+        transform: translateX(-50%) translateY(-70px);
     }
 }
 
 .achieve-wrapper{
-    margin-top: 90px;
+    margin-top: 76px;
     padding: 40px;
     background-color: $primary;
 
     @include mobile{
         padding: 20px;
-        margin-top: 0;
+        margin-top: -14px;
     }
 
     .achieve-row{
@@ -48,35 +49,6 @@
         .achieve-col-left{
             @include mobile{
                 margin-bottom: 20px;
-            }
-
-            .btn-wrapper{
-                position: -webkit-sticky;
-                position: sticky;
-                top: 95px;
-
-                .achieve-link{
-                    .achieve-btn{
-                        background-color: $defaultColor;
-                        color: #fff;
-                        border: none;
-                        border-radius: 5px;
-                        margin: 10px 0;
-                        padding: 5px 0;
-                        width: 100%;
-                        font-size: $defaultFontSize;
-                        font-family: $defaultFont;
-
-                        @include mobile{
-                            font-size: $fontSizeMobile;
-                        }
-
-                        &:hover{
-                            // border: 1px solid #fff;
-                            color: $primary;
-                        }
-                    }
-                }
             }
         }
     }
@@ -98,6 +70,7 @@
             font-weight: 400;
             font-family: $defaultFont;
             text-align: center;
+            margin-top: 50px;
 
             @include mobile{
                 font-size: 25px;
@@ -105,18 +78,20 @@
         }
 
         .paper-row{
-            margin: 20px 0;
+            margin: 20px 0 50px;
 
             .paper-col{
                 .paper-txt1{
                     color: #fff;
                     text-align: center;
+                    opacity: 0.8;
+                    font-size: 30px;
                 }
 
                 .paper-txt2{
                     color: #fff;
-                    opacity: 0.5;
                     text-align: center;
+                    font-size: 80px;
                 }
             }
         }
@@ -126,27 +101,63 @@
             .achieve-col1{
                 padding: 0;
 
-                @include mobile{
-                    margin: 5px;
-                }
+                // @include mobile{
+                //     margin: 5px;
+                // }
 
                 .achieve-img{
                     // width: 100%;
                     border-radius: 20px;
-                    width: 245px;
-                    height: 190px;
+                    width: 300px;
+                    height: 230px;                
                     margin: 10px;
 
+                    @include tablet{
+                        width: 350px;
+                        height: 250px;
+                    }
+
                     @include mobile{
-                        width: 162px;
+                        width: 145px;
                         height: 105px;
+                        margin: 10%;
                     }
 
                     &:hover{
                         border: 5px solid $defaultColor;
                     }
                 }
+
+                .achieve-img2{
+                    @include mobile{
+                        display: none;
+                    }
+                }
+            }
+
+            .achieve-col2{
+                padding: 0;
+                // margin: 5px;
+
+                @include desktop{
+                    display: none;
+                }
+
+                @include tablet{
+                    display: none;
+                }
+
+                .achieve-img3{
+                    width: 145px;
+                    height: 105px;
+                    margin: 10%;
+                    border-radius: 20px;
+                }
             }
         }
     }
 }
+
+// .isActive{
+
+// }
