--- a/src/components/globalStyle/_variables.scss
+++ b/src/components/globalStyle/_variables.scss
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 $primary: #252842;
 $defaultColor: #37b6fd;
-$defaultFont: Montserrat;
+$defaultFont: Roboto;
 $defaultFontSize: 20px;
-$fontSizeMobile: 18px;
-$fontSizeTitle: 50px;
+$defaultLineHeight: 1.4;
+$fontSizeMobile: 15px;
+$fontSizeTitle: 46px;
 $fontSizeTitle: 64px;
