--- a/src/components/event/Event.scss
+++ b/src/components/event/Event.scss
@@ -1,5 +1,24 @@
+@import '.././globalStyle/mixin';
+@import '.././globalStyle/variables';
+
+
+
+.custom-event-wrapper {
+    @include mobile {
+        margin-top: 70px;
+    }
+}
+.wrapper {
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+
 .title {
-    font-size: 2.5rem;
+    // font-size: 2.5rem;
     margin-bottom: 0.5rem;
     color: white;
     display: flex;
@@ -13,20 +32,34 @@
     color: white !important;
     padding: 25px 0;
     border-bottom: 1px solid rgb(114, 113, 113);
+
+    @include mobile {
+        flex-direction: column-reverse;
+        padding: 10px 0;
+    }
     
     .paper-txt1 {
         opacity: 0.7;
         font-weight: 500;
         padding-right: 30px;
-        text-align: justify;
+        align-items:start ;
+        height: 100%;
+        padding-top: 10px;
+        @include mobile {
+            width: 100%;
+            text-align: right;
+        }
     }
     .paper-txt2 {
         display: block;
-        font-weight: 500;
+        font-weight: 400;
         flex: 1;
         color: white;
         text-decoration: none;
         text-align: justify;
+        p {
+            opacity: 0.8;
+        }
         &:hover {
             color: #b8b6b6 !important;
             transition: all 0.3s ease-in-out;
@@ -35,24 +68,28 @@
 }
 .custom-event:last-child {
     border-bottom: none;
+    
 }
+
 
 
 
 // event detail
 .wrap-text {
-    position: absolute;
-    top: 25%;
-    right: 10%;
-    left: 10%;
-    padding: 1rem;
-    margin: auto;
-    border-radius: 1rem;
-    background-color: rgba(0, 0, 0, 0.3);
+    .title {
+        color: black;
+        font-weight: bold;
+    }
+    .description {
+        color: black;
+        // font-size: 1.5rem;
+        font-weight: 500;
+        text-align: justify;
+    }
 }
 
 .description{
-    font-size: 1.5rem;
+    // font-size: 1.5rem;
     font-weight: 500;
     color: white;
     text-align: center;
@@ -64,13 +101,13 @@
     border-radius: 1rem;
     padding: 1rem;
     .wrap-btn-apply {
+        margin-top: 15px;
         width: 100%;
         display: flex;
         justify-content: center;
     }
 }
-// @import '.././globalStyle/mixin';
-// @import '.././globalStyle/variables';
+
 
 // .wrapper{
 //     position: relative;
