--- a/src/components/event/Event.scss
+++ b/src/components/event/Event.scss
@@ -10,8 +10,6 @@
 }
 .wrapper {
     img {
-        width: 100%;
-        height: 100%;
         object-fit: cover;
     }
 }
@@ -32,7 +30,7 @@
     color: white !important;
     padding: 25px 0;
     border-bottom: 1px solid rgb(114, 113, 113);
-
+    cursor: pointer;
     @include mobile {
         flex-direction: column-reverse;
         padding: 10px 0;
@@ -56,7 +54,11 @@
         flex: 1;
         color: white;
         text-decoration: none;
-        text-align: justify;
+        text-align: left;
+        @include mobile {
+            width: 100%;
+            text-align: left;
+        }
         p {
             opacity: 0.8;
         }
