--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -9,12 +9,13 @@
     background-color: $primary;
     margin: 0;
     padding: 40px;
+    padding-bottom: 10px;
     width: 100%;
     // font-family: serif;
     // padding-top: 130px;
 
     @include mobile{
-        padding: 20px;
+        padding: 20px 20px 10px 20px;
     }
 
     // .footer-row1{
@@ -141,6 +142,7 @@
                 text-align: center;
 
                 .follow-item{
+                    font-size: 25px !important;
                     padding: 10px;
                 }
             }
@@ -154,6 +156,7 @@
 
     .copyright-txt{
         color: #fff;
+        opacity: 0.5;
         text-align: center;
     }
 }
