--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -11,6 +11,7 @@
     padding: 40px;
     padding-bottom: 10px;
     width: 100%;
+    border-top: 1px solid #fff;
     // font-family: serif;
     // padding-top: 130px;
 
