--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -68,6 +68,8 @@
                 font-weight: 500;
                 border-radius: 3px;
                 margin: 0 5px;
+                text-decoration: none;
+                padding: 5px 10px;
             
                 &:hover{
                     background-color: $defaultColor;
@@ -83,6 +85,10 @@
                     text-align: center;
                     margin: 0;
                 }
+            }
+
+            .nav-item.active{
+                background-color: $defaultColor;
             }
         }
 
