--- a/src/components/achievement/Achievement.scss
+++ b/src/components/achievement/Achievement.scss
@@ -1,5 +1,6 @@
 @import '.././globalStyle/mixin';
 @import '.././globalStyle/variables';
+@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@200;400&display=swap');
 
 .wrapper{
     position: relative;
@@ -92,6 +93,7 @@
                     color: #fff;
                     text-align: center;
                     font-size: 80px;
+                    font-family: 'Handjet', cursive;
                 }
             }
         }
@@ -99,29 +101,34 @@
             // margin: 20px 0;
 
             .achieve-col1{
-                padding: 0;
+                // padding: 0;
 
                 // @include mobile{
                 //     margin: 5px;
                 // }
-
+                // width: 100%;
+                padding: 0 7px;
+                margin : 7px 0;
                 .achieve-img{
-                    // width: 100%;
-                    border-radius: 20px;
-                    width: 300px;
-                    height: 230px;                
-                    margin: 10px;
+                    // padding: 100%;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 10px;
+                    // width: 90%;
+                    // height: ;                
+                    // margin: 10px;
 
-                    @include tablet{
-                        width: 350px;
-                        height: 250px;
-                    }
+                    // @include tablet{
+                    //     width: 350px;
+                    //     height: 250px;
+                    // }
 
-                    @include mobile{
-                        width: 145px;
-                        height: 105px;
-                        margin: 10%;
-                    }
+                    // @include mobile{
+                    //     width: 145px;
+                    //     height: 105px;
+                    //     margin: 10%;
+                    // }
 
                     &:hover{
                         border: 5px solid $defaultColor;
