--- a/src/components/member/Member.scss
+++ b/src/components/member/Member.scss
@@ -131,12 +131,12 @@
 
         .carousel-item-wrapper{
             display: flex;
-            background: linear-gradient(300deg, rgba(200, 200, 200, 0.70) 0%, rgba(0, 0, 0, 0.40) 100%), rgba(255, 255, 255, 0.70);
+            background: linear-gradient(300deg, rgba(200, 200, 200, 0.70) 0%, rgba(100, 100, 100, 0.60) 100%), rgba(200, 200, 200, 0.70);
             padding: 20px;
             border-radius: 30px;
             @include mobile{
                 display: block;
-                background: linear-gradient(190deg, rgba(200, 200, 200, 0.70) 0%, rgba(0, 0, 0, 0.40) 100%), rgba(255, 255, 255, 0.70);
+                background: linear-gradient(190deg, rgba(200, 200, 200, 0.70) 0%, rgba(100, 100, 100, 0.60) 100%), rgba(200, 200, 200, 0.70);
             }
         }
 
@@ -247,6 +247,19 @@
             }
         }
         @include mobile{
+            margin: 0;
+            padding: 0;
+            .avt-wrapper{
+                
+                .img-wrapper{
+                    .avt-member{
+                        width: 150px;
+                        height: 200px;
+                    }
+                }                
+            }
+        }
+        @include tablet {
             margin: 0;
             padding: 0;
             .avt-wrapper{
